--- a/src/App.css
+++ b/src/App.css
@@ -1,43 +1,19 @@
 .App {
   text-align: center;
-}
+  width: 1200px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 .photo {
-  width: 50%;
-  height: 50%;
+  width: 25%;
+  height: 25%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.titles {
+  font-size: 22px;
+  font-weight:bold;
+  text-align: center;
 }
+
+
